--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,11 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+
+#############
+# NetBeans
+#############
+
+/nbproject/private/private.xml
+/nbproject/project.bak.xml
